input type=number doesn't render correctly in rtl. https://bugs.webkit.org/show_bug.cgi?id=59703

Source/WebCore:

Reviewed by Ryosuke Niwa.

Test: fast/forms/input-appearance-number-rtl.html

* css/html.css:
(input[type="search"]::-webkit-textfield-decoration-container):
Set "direction: ltr;" only for type=search because we'd like to
respect text direction except type=search.
(input[x-webkit-speech][di=rtl]::-webkit-input-speech-button):
Remove a workaround.
* rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::layout):
Support for RTL in the spin button location adjustment.

LayoutTests:

Patch by tkent@chromium.org <tkent@chromium.org@268f45cc-cd09-0410-ab3c-d52691b4dbfc> on 2011-07-20
Reviewed by Ryosuke Niwa.

* fast/forms/input-appearance-number-rtl.html: Added.
* platform/chromium/test_expectations.txt:
* platform/gtk/test_expectations.txt:
* platform/mac/fast/forms/input-appearance-number-rtl-expected.png: Added.
* platform/mac/fast/forms/input-appearance-number-rtl-expected.txt: Added.
* platform/qt/test_expectations.txt:

Canonical link: https://commits.webkit.org/80587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91345 268f45cc-cd09-0410-ab3c-d52691b4dbfc